ci/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: islandora-tesseract
spec:
  selector:
    app: islandora-tesseract
  ports:
    - protocol: TCP
      port: 8080
